# hydroponics-controller

./: Cargo.toml  README.md  hackspace-germination.json  hackspace-germination.service  hackspace-hydro.json  hackspace-spiderplant.json  hackspace-spiderplant.service  hydroponics-controller.service  sample.json
6a967751d3400a1c100bea37a73a2f78/: author  creation_time  description
84aa316fca4a2da0f3d0cfd9ef44d339/: creation_time  description
8e96e0f7102b100146872eb89840281e/: creation_time  description
92f40e82201306d71e898e41e96621e8/: creation_time  description
9655ee6081103c2277e5c6d812cb49f1/: creation_time  description
a15cdc8268695e92ae33233c0b35bc21/: author  creation_time  description
src/: demo.json  main.rs  schedule.json  stub.yaml  the.json
