[package]
name = "hydroponics-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version ="0.4.38", features = ["serde"]}
clap = { version = "4.5.36", features = ["derive"] }
duration-str = "0.21.0"
serde = {version ="1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tasmor_lib = "0.5.0"
tokio = {version = "1.41.1", features = ["full"]}
