[package]
name = "hydroponics-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version ="0.4.38", features = ["serde"]}
clap = { version = "4.5.36", features = ["derive"] }
http = "1.1.0"
reqwest = "0.12.9"
serde = {version ="1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ["full"]}
url = { version ="2.5.4", features = ["serde"]}
